# BOOKSTORE-2025

./: CMakeLists.txt  README.md  code  extra.in  run_tests  总体设计文档.md  标准要求.md  需求分析文档.md
include/: account_manager.h  book.h  book_manager.h  log_manager.h  tempCodeRunnerFile.h  utils.h
scripts/: tests.md
src/: Paser.cpp  account_manager.cpp  book_manager.cpp  log_manager.cpp  main.cpp  utils.cpp
test_output/: 110.out
testcases/: config.json
testcases/BasicTestCase-8/: 11.in
